--- a/Trivia/Puzzles/squares.html
+++ b/Trivia/Puzzles/squares.html
@@ -167,6 +167,44 @@
          <div class= "javascri_p_t-number space" onmouseover="changeText('Default Hint')"  onmouseout="defaultText()">8</div>
   
          <input id= "answerU" onkeyup="change()">
+
+         <div class="dropdown dropone dropleft">
+          <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Number
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            
+
+            <a class="dropdown-item" onclick="functionone('1')"> 1 </a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" onclick="fuctiontwo('2')"> 2 </a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" onclick="functionthree('3')"> 3 </a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" onclick="functionfour('4')"> 4 </a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" onclick="functionfive('5')"> 5 </a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" onclick="functionsix('6')"> 6 </a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" onclick="functionseven('7')"> 7 </a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" onclick="functioneight('8')"> 8 </a>
+          </div>
+        </div>
+
+        <div class="droptwo dropdown dropright">
+          <button class="droptwo btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Across or Down
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" onclick="functiondown('Down')">Down</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" onclick="functionacross('Across')">Across</a>
+      
+          </div>
+        </div>
+
          <button id= "bss">Click me</button>
   
   
