--- a/Trivia/Life/life.html
+++ b/Trivia/Life/life.html
@@ -97,7 +97,7 @@
         <head>
       
         <div style="text-align: center">
-            <a href="life1.html"><button class="button3">Continue</button></a>
+            <a href="/Trivia/Life/Biologist/Act1b.html"><button class="button3">Continue</button></a>
 
         </div>
                 </body>
