--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@ background-size: cover;
 <div style="text-align: center">
     <h1 style="font-family:Georgia, 'Times New Roman', Times, serif;">Voohoo
     </h1>
-<p>Welcome to Voohoo! 
-  This is site contains different puzzles and trivias that will challenge your ability to solve things.</p>
+<h3>Welcome to Voohoo! 
+  This is site contains different puzzles and trivias that will challenge your ability to solve things.</h3>
 </div>
 <div class="v">
      <a href="trivia index.html"><button class="bocbutton"><h1>Trivias</h1></button></a>
