--- a/minecraft trivia.html
+++ b/minecraft trivia.html
@@ -100,7 +100,7 @@ alt="">
 <div style="text-align: center;">
 <h1>Minecraft Trivia </h1>
 
-<a href="minecraft trivia trivia2.html"><button>Click to continue</button></a>
+<a href="minecraft trivia2.html"><button>Click to continue</button></a>
 </div>
         </body>
         </html> 
