--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ background-size: cover;
     <h1 style="font-family:Georgia, 'Times New Roman', Times, serif;">Voohoo
     </h1>
 <h3>Welcome to Voohoo! 
-  This is site contains different puzzles and trivias that will challenge your ability to solve things.</h3>
+  This is site contains different puzzles and trivias that will challenge your ability to solve things.</>
 </div>
 <div class="v">
      <a href="trivia index.html"><button class="bocbutton"><h1>Trivias</h1></button></a>
