--- a/trivia index.html
+++ b/trivia index.html
@@ -123,6 +123,10 @@ background-size: cover;
         src="https://cdn.vox-cdn.com/thumbor/ipajjnzaEyDK1badzdbQ32MSxVI=/0x0:767x431/1200x800/filters:focal(323x155:445x277)/cdn.vox-cdn.com/uploads/chorus_image/image/63226878/0fe20042_0bb8_4781_82f4_7130f928b021.0.jpg" 
         width="202" height="206" title="DC Universe" alt="Trivia"></a>
 
+        <a href="/Trivia/Movies/Moviestrivia.html"><img 
+          src="https://images.redbox.com/Images/EPC/boxartvertical/202773.jpg"
+          width="202" height="206" title="DC Universe" alt="Trivia"></a>
+
         <div class="center">
           <a href="index.html"><button class="backbutton"><h1>Go Back</h1></button></a>
       </div>
