--- a/Trivia/Puzzles/squares.html
+++ b/Trivia/Puzzles/squares.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" type= "text/css" href="/style.css">
  
     <title>None</title>
   </head>
@@ -77,7 +77,7 @@
 
 
 
-        <div class ='grid-container'>
+        <div class ='grid'>
        <!--The Defult Hint-->
         <div id="text-display">
   
@@ -166,7 +166,7 @@
          <div class= "javascr_i_pt-number space" onmouseover="changeText('Default Hint')"  onmouseout="defaultText()">7</div>
          <div class= "javascri_p_t-number space" onmouseover="changeText('Default Hint')"  onmouseout="defaultText()">8</div>
   
-         <input id= "answerU" onkeyup="change()">
+         <input id= "answerU" onkeyup="change()" placeholder= "Put your Guess Here!" autofocus>
 
          <div class="dropdown dropone dropleft">
           <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
