--- a/Trivia/nintendo/third trivia13.html
+++ b/Trivia/nintendo/third trivia13.html
@@ -73,7 +73,7 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">Which one of these Items did Nintendo once sell?</h1>
+<h1 id ='trivia'align="center">When was Mario created?</h1>
 <!-- BACKGROUND -->
 <style>
   body {
