--- a/minecraft trivia11.html
+++ b/minecraft trivia11.html
@@ -72,7 +72,7 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">Congratulations you got the Victory Royale Gamer!</h1>
+<h1 id ='trivia'align="center">Congratulations you got the Epic Victory Royale Gamer!</h1>
 <!-- add image/gif -->
 <div class="v">
 <img src="https://thumbs.gfycat.com/RedGiganticGar-size_restricted.gif" 
