--- a/minecraft trivia11.html
+++ b/minecraft trivia11.html
@@ -87,6 +87,10 @@ alt="">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 
+<div class="center">
+  <a href="trivia index.html"><button class="backbutton"><h1>Go Back</h1></button></a>
+</div>
+
 </body>
 </html>
 <head>
