--- a/Trivia/Puzzles/squares.html
+++ b/Trivia/Puzzles/squares.html
@@ -167,6 +167,7 @@
          <div class= "javascri_p_t-number space" onmouseover="changeText('Default Hint')"  onmouseout="defaultText()">8</div>
   
          <input id= "answerU" onkeyup="change()" placeholder= "Put your Guess Here!" autofocus>
+         <label id= "hi" for= "answerU">hi</label>
 
          <div class="dropdown dropone dropleft">
           <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -175,7 +176,7 @@
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             
 
-            <a class="dropdown-item" onclick="functionone('1')"> 1 </a>
+            <a class="dropdown-item" onclick="functionone('1')" > 1 </a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" onclick="fuctiontwo('2')"> 2 </a>
             <div class="dropdown-divider"></div>
