--- a/Trivia/Basketball/basketballtrivia.html
+++ b/Trivia/Basketball/basketballtrivia.html
@@ -73,5 +73,5 @@ background-size: cover;
     <div style="text-align: center;">
 <h1>Answer the basketball questions correctly</h1>
 
-  <a href="basketballtrivia1.html"><button>Click to continue</button></a>
+  <a href="/Trivia/Basketball/basketballtrivia1.html"><button>Click to continue</button></a>
     </div>
