--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a class="dropdown-item" href="/Trivia/DC/fifth trivia1.html">DC Universe</a>
             <a class="dropdown-item" href="/Trivia/funko/triviafunko.html">FunkoPop</a>
             <a class="dropdown-item" href="/Trivia/Warriors/Warriors1trivia.html">Warriors</a>
-            <a class="dropdown-item" href="/Trivia//">Basketball</a>
+            <a class="dropdown-item" href="/Trivia/Basketball/basketballtrivia.html">Basketball</a>
             <div class="dropdown-divider"></div>
           </div>
           
