--- a/Trivia/Starwars/second trivia12.html
+++ b/Trivia/Starwars/second trivia12.html
@@ -57,6 +57,7 @@
       
     </div>
   </nav>
+
   <!doctype html>
 <html lang="en">
 <head>
@@ -72,7 +73,7 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">How do sith get there Red Blades?</h1>
+<h1 id ='trivia'align="center">why did vader die from the emperors force lightning?</h1>
 <!-- BACKGROUND -->
 <style>
   body {
@@ -82,8 +83,8 @@ background-size: cover;
 }
 </style>
 <!-- add image/gif -->
-<div class="v">
-<img src="https://i.makeagif.com/media/5-16-2017/rtQbpf.gif" 
+<div class="x">
+<img src="https://marciokenobi.files.wordpress.com/2015/11/untitled-381.gif" 
 alt="">
 </div>
 <!-- Optional JavaScript -->
@@ -94,11 +95,11 @@ alt="">
 </script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
-<div class="x">
-<a href="second trivia1 wrong.html"><button>They dye it red</button></a>
-<a href="second trivia1 wrong.html"><button>its naturally red just a rare color</button></a>
-<a href="second trivia13.html"><button>pour in their hate and anger to make the krystal to bleed red</button></a>
-<a href="second trivia1 wrong.html"><button>they do a ritual</button></a>
+<div class="v">
+<a href="second trivia1 wrong.html"><button>he was already weakened by luke when he damaged his suit</button></a>
+<a href="Second trivia13.html"><button>his suit had a weakness to force lightning designed by palpatine himself</button></a>
+<a href="second trivia1 wrong.html"><button>the force lightning cause his life support to stop working</button></a>
+<a href="second trivia1 wrong.html"><button>none of the above</button></a>
 </div>
 </body>
 </html>
