--- a/Trivia/Starwars/second trivia13.html
+++ b/Trivia/Starwars/second trivia13.html
@@ -57,6 +57,7 @@
       
     </div>
   </nav>
+
   <!doctype html>
 <html lang="en">
 <head>
@@ -72,7 +73,7 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">Why did Darth Maul use a double bladed Lightsaber?</h1>
+<h1 id ='trivia'align="center">how did Han Solo get the Falcon?</h1>
 <!-- BACKGROUND -->
 <style>
   body {
@@ -82,9 +83,9 @@ background-size: cover;
 }
 </style>
 <!-- add image/gif -->
-<div class="v">
-<img src="https://media.giphy.com/media/GFxXy4kf0wq64/giphy.gif" /> 
-<!-- alt="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjzuZDF2K3jAhXTMX0KHbhnDRkQjRx6BAgBEAU&url=https%3A%2F%2Fwww.cbr.com%2Freasons-darth-maul-biggest-badass-sith%2F&psig=AOvVaw0AmoHlzRsoklykUWPq_y_r&ust=1562962690475989"> -->
+<div class="x">
+<img src="https://ewscripps.brightspotcdn.com/dims4/default/a782f54/2147483647/strip/true/crop/640x360+0+60/resize/1280x720!/quality/90/?url=https%3A%2F%2Fmediaassets.wcpo.com%2Fphoto%2F2018%2F04%2F23%2FWCPO_falcon_1524528489522_84735425_ver1.0_640_480.jpg" 
+alt="">
 </div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -95,10 +96,10 @@ background-size: cover;
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="v">
-<a href="second trivia1 wrong.html"><button>He thought it would be intimidating and scare the opponent to make mistakes during battle</button></a>
-<a href="second trivia1 wrong.html"><button>the thought it looked cool</button></a>
-<a href="second trivia14.html"><button>it gave him more choices during combat</button></a>
-<a href="second trivia1 wrong.html"><button>he was given it as a trophie/prize</button></a>
+<a href="second trivia1 wrong.html"><button>Stole it</button></a>
+<a href="second trivia14.html"><button>Won it</button></a>
+<a href="second trivia1 wrong.html"><button>Bought it</button></a>
+<a href="second trivia1 wrong.html"><button>Borrowed it and never gave it back</button></a>
 </div>
 </body>
 </html>
