--- a/Trivia/Starwars/second trivia22.html
+++ b/Trivia/Starwars/second trivia22.html
@@ -57,7 +57,6 @@
       
     </div>
   </nav>
-
   <!doctype html>
 <html lang="en">
 <head>
@@ -73,7 +72,7 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">How much does a Lightsaber usaully cost in the black market?</h1>
+<h1 id ='trivia'align="center">How old was Anakin when he died?</h1>
 <!-- BACKGROUND -->
 <style>
   body {
@@ -84,7 +83,7 @@ background-size: cover;
 </style>
 <!-- add image/gif -->
 <div class="x">
-<img src="https://cdn.shopify.com/s/files/1/1440/9434/products/redeemer-v2_8a3db6a7-8fe1-4f09-90e3-a9f4c8057f14_300x300.jpg?v=1558480091" 
+<img src="https://cbsnews1.cbsistatic.com/hub/i/r/2015/12/15/a40efc03-73a6-458f-a5ff-697d1cca1aef/resize/620x465/7990fcf9a625c425516d571e5c720069/darth-vader-unmasked.png" 
 alt="">
 </div>
 <!-- Optional JavaScript -->
@@ -96,10 +95,10 @@ alt="">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="v">
-<a href="second trivia1 wrong.html"><button>10.000 credits</button></a>
-<a href="second trivia23.html"><button>20,000 credits</button></a>
-<a href="second trivia1 wrong.html"><button>30.000 credits</button></a>
-<a href="second trivia1 wrong.html"><button>40,000 credits</button></a>
+<a href="second trivia1 wrong.html"><button>40</button></a>
+<a href="second trivia1 wrong.html"><button>42</button></a>
+<a href="second trivia1 wrong.html"><button>43</button></a>
+<a href="second trivia23.html"><button>44</button></a>
 </div>
 </body>
 </html>
