--- a/Trivia/Starwars/second trivia9.html
+++ b/Trivia/Starwars/second trivia9.html
@@ -57,7 +57,6 @@
       
     </div>
   </nav>
-
   <!doctype html>
 <html lang="en">
 <head>
@@ -73,18 +72,18 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">How many clones where created throughtout the entire clone wars til the end?</h1>
+<h1 id ='trivia'align="center">Who was the first clone to discover Orde 66?</h1>
 <!-- BACKGROUND -->
 <style>
   body {
-background-image: url(https://wallpaperplay.com/walls/full/d/6/9/181380.jpg);
+background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
 background-repeat: no-repeat;
 background-size: cover;
 }
 </style>
 <!-- add image/gif -->
 <div class="x">
-<img src="https://drnorth.files.wordpress.com/2009/06/vlcsnap-45052.png?w=584" 
+<img src="https://vignette.wikia.nocookie.net/theclonewiki/images/0/0f/Fives.png/revision/latest?cb=20111031142656" 
 alt="">
 </div>
 <!-- Optional JavaScript -->
@@ -96,10 +95,10 @@ alt="">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="v">
-<a href="second trivia1 wrong.html"><button>645,323,340 clones</button></a>
-<a href="second trivia10.html"><button>691,200,000 clones</button></a>
-<a href="second trivia1 wrong.html"><button>700,985,000 clones</button></a>
-<a href="second trivia1 wrong.html"><button>690,876,500 clones</button></a>
+<a href="second trivia1 wrong.html"><button>Echo </button></a>
+<a href="second trivia1 wrong.html"><button>Commander Wolf</button></a>
+<a href="second trivia10.html"><button>Fives</button></a>
+<a href="second trivia1 wrong.html"><button>Captain Rex</button></a>
 </div>
 </body>
 </html>
