--- a/Trivia/nintendo/third trivia9.html
+++ b/Trivia/nintendo/third trivia9.html
@@ -68,13 +68,14 @@
 
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="/style.css">
 <title>[Website name]</title>
 </head>
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">How many National HQ's does Nintendo have?</h1>
+<h1 id ='trivia'align="center">How many National HQ's does Nintendo have?</h1> 
+
 <!-- BACKGROUND -->
 <style>
   body {
