--- a/Trivia/funko/triviafunko1.html
+++ b/Trivia/funko/triviafunko1.html
@@ -73,7 +73,7 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">When was funko pops created?</h1>
+<h1 id ='trivia'align="center">Where is this pop from?</h1>
 <!-- BACKGROUND -->
 <style>
   body {
@@ -84,7 +84,7 @@ background-size: cover;
 </style>)
 <!-- add image/gif -->
 <div style="text-align: center">
-<img src="https://images-na.ssl-images-amazon.com/images/I/51jAfUVaYLL._SX466_.jpg" 
+<img src="https://prodimage.images-bn.com/pimages/0889698311779_p0_v2_s550x406.jpg" 
 alt="">
 </div>
 <!-- Optional JavaScript -->
@@ -96,10 +96,10 @@ alt="">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div style="text-align: center">
-<a href="triviafunkowrong1.html"><button>1983</button></a>
-<a href="triviafunkowrong1.html"><button>1975</button></a>
-<a href="triviafunkowrong1.html"><button>1962</button></a>
-<a href="2triviafunko.html"><button>1998</button></a>
+<a href="triviafunkowrong1.html"><button>superman</button></a>
+<a href="triviafunkowrong1.html"><button>batman</button></a>
+<a href="triviafunkowrong1.html"><button>green lantern</button></a>
+<a href="2triviafunko.html"><button>Aquaman</button></a>
 </div>
 </body>
 </html>
