--- a/Trivia/Puzzles/squares.html
+++ b/Trivia/Puzzles/squares.html
@@ -206,10 +206,11 @@
           </div>
         </div>
 
-         <button id= "bss">Click me</button>
+         <button id="bss">Click me</button>
   
   
         </div>
+        <div id="dog"> Congrats </div>
     <!-- Optional JavaScript -->
     <script src='/main.js'></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
