--- a/Trivia/Puzzles/squares.html
+++ b/Trivia/Puzzles/squares.html
@@ -178,7 +178,7 @@
 
             <a class="dropdown-item" onclick="functionone('1')" > 1 </a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" onclick="fuctiontwo('2')"> 2 </a>
+            <a class="dropdown-item" onclick="functiontwo('2')"> 2 </a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" onclick="functionthree('3')"> 3 </a>
             <div class="dropdown-divider"></div>
