--- a/trivia index.html
+++ b/trivia index.html
@@ -85,8 +85,8 @@ background-size: cover;
 <div style="text-align: center">
     <h1 style="font-family:Georgia, 'Times New Roman', Times, serif;">Voohoo
     </h1>
-<p>Welcome to Voohoo! 
-  Welcome to the Trivia Page! Good Luck and have fun</p>
+<h3>
+  Welcome to the Trivia Page! Good Luck and have fun</h3>
 </div>
   <a href="/Trivia/Warriors/Warriors1trivia.html"><img src="https://teamwork-online-production.s3.amazonaws.com/uploads/21483644-6d68-43d4-a8c2-27b15d6d081f.png" 
       width="200" height="200"></a>
