--- a/Trivia/Puzzles/squares.html
+++ b/Trivia/Puzzles/squares.html
@@ -167,7 +167,7 @@
          <div class= "javascri_p_t-number space" onmouseover="changeText('Default Hint')"  onmouseout="defaultText()">8</div>
   
          <input id= "answerU" onkeyup="change()" placeholder= "Put your Guess Here!" autofocus>
-         <label id= "hi" for= "answerU">hi</label>
+         <label id= "answerU" for= "answerU">hi</label>
 
          <div class="dropdown dropone dropleft">
           <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
