--- a/Trivia/Puzzles/squares.html
+++ b/Trivia/Puzzles/squares.html
@@ -210,6 +210,7 @@
   
   
         </div>
+        <button id = "check"> Check </button>
         <div id="dog"> Congrats </div>
     <!-- Optional JavaScript -->
     <script src='/main.js'></script>
