ignred some thins

--- a/Trivia/Puzzles/squares.html
+++ b/Trivia/Puzzles/squares.html
@@ -173,7 +173,7 @@
           <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Number
           </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <div class="dropdown-menu" id= "droponetwo" aria-labelledby="dropdownMenuButton">
             
 
             <a class="dropdown-item" onclick="functionone('1')" > 1 </a>
@@ -198,7 +198,7 @@
           <button class="droptwo btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Across or Down
           </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <div class="dropdown-menu" id = "droptwotwo" aria-labelledby="dropdownMenuButton">
             <a class="dropdown-item" onclick="functiondown('Down')">Down</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" onclick="functionacross('Across')">Across</a>
@@ -208,10 +208,11 @@
 
          <button id="bss">Click me</button>
   
-  
+         <a id = "bst" href= "Solutions.html" target="_blank">Solutions</a>
+         <button id = "check"> Check </button>
+         <div id="dog"> Congrats </div>
         </div>
-        <button id = "check"> Check </button>
-        <div id="dog"> Congrats </div>
+        <a id = "bst" href= "Solutions.html" target="_blank">Solutions</a>
     <!-- Optional JavaScript -->
     <script src='/main.js'></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
