--- a/Trivia/Puzzles/squares.html
+++ b/Trivia/Puzzles/squares.html
@@ -11,7 +11,7 @@
  
     <title>None</title>
   </head>
-  <body>
+  <body id = "screen">
 
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <a class="navbar-brand" href="/index.html">Home</a>
@@ -167,7 +167,7 @@
          <div class= "javascri_p_t-number space" onmouseover="changeText('Default Hint')"  onmouseout="defaultText()">8</div>
   
          <input id= "answerU" onkeyup="change()" placeholder= "Put your Guess Here!" autofocus>
-         <label id= "answerU" for= "answerU">hi</label>
+         <label id= "hi" for= "answerU">hi</label>
 
          <div class="dropdown dropone dropleft">
           <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -194,7 +194,7 @@
           </div>
         </div>
 
-        <div class="droptwo dropdown dropright">
+        <div class="droptwo dropdown dropleft">
           <button class="droptwo btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Across or Down
           </button>
@@ -209,7 +209,7 @@
          <button id="bss">Click me</button>
   
          <a id = "bst" href= "Solutions.html" target="_blank">Solutions</a>
-         <button id = "check"> Check </button>
+         <button id = "check_all"> Check All </button>
          <div id="dog"> Congrats </div>
         </div>
         <a id = "bst" href= "Solutions.html" target="_blank">Solutions</a>
