--- a/index.html
+++ b/index.html
@@ -97,13 +97,9 @@
           background-color: rgb(0, 153, 255);
         }
 
-        #section1 {
-          height: 800px;
-          background-color: rgb(156, 156, 245);
-        }
         
         #section2 {
-          height: 800px;
+          height: 1000px;
           background-color: yellow;
         }
         </style>
@@ -118,7 +114,7 @@
                 <h1 style="font-family:Georgia, 'Times New Roman', Times, serif;">Voohoo
                 </h1>
             <h3>Welcome to Voohoo! 
-              This is site contains different puzzles and trivias that will challenge your ability to solve things.</>
+              This is site contains different puzzles and trivias that will challenge your ability to solve things.</h3>
             </div>
             <div class="v">
                 <a href="trivia index.html"><button class="bocbutton"><h1>Trivias</h1></button></a>
