--- a/Trivia/funko/5triviafunko.html
+++ b/Trivia/funko/5triviafunko.html
@@ -68,12 +68,12 @@
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" href="/style.css">
-<title>Voohoo Trivias</title>
+<title>[Website name]</title>
 </head>
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">What is this  character who appeared in halloween cereal ?</h1>
+<h1 style="text-align: center">What is this  character who appeared in halloween cereal ?</h1>
 <!-- BACKGROUND -->
 <style>
   body {
