--- a/Trivia/Memory/memory2.html
+++ b/Trivia/Memory/memory2.html
@@ -90,7 +90,7 @@ Listed correctly, then "winner". if not then, "try again" -->
                 </div>
                 <div class="v">
         <button id='y'>Check answer</button>
-        <input id='text'/>
+        <input id='text'autofocus>
         <div id="result"></div>
         <div id="new">
             <a href="memory3.html"><button>Click to continue</button></a>
